assets/css/style.css
/*----------------------Colors */
.nav-container {
    background-image: linear-gradient(to right, rgba(148, 97, 142, 0.001), rgba(148, 97, 142, 1));
}

.history-content-top-row,
.history-content {
    background-color: rgba(148, 97, 142, 0.8);
}


#footer-container {
    background-color: rgba(148, 97, 142, 1);
}


body,
#logo,
.modal-content,
.image-gallery-container {
    background-color: #F8EEE7;
}


/*-------------------Special paddings/margins/text */

h2,
h3,
h4,
h5 {
    font-family: "Ubuntu";
    font-weight: 700;
    color: #49274A;
}

h1,
h2,
h3,
h4,
h5 {
    margin: 0;
}

.uppercase {
    text-transform: uppercase;
}

#history-heading,
#gallery-heading {
    margin-top: 20px;
    margin-bottom: 10px;
    font-family: Ubuntu, sans-serif;
    font-size: 35px;
    color: #49274A;
}


/*----------------------Header */

#logo {
    font-family: Monoton;
    text-align: center;
    margin-top: 8px;
    color: #49274A;
    font-size: 5.5vw;
}

/*how to push header/nav down> */
.header-container {
    margin-top: 10px;
    margin-bottom: 15px;
    max-height: 90px;
    width: 98%;
}

a {
    overflow: hidden;
    Margin-top: 5px;
    font-family: "Ubuntu", sans-serif;
    font-weight: 700;
    color: #49274A;
    text-decoration: none;
    font-size: 20px;
    letter-spacing: 2px;
    padding: 5px 5px 10px 5px;
}

/* Change the color of links on hover */
nav a:hover {
    color: #ececef;
}

/*Change the color of the link for current page */
#nav-home a,
#nav-gallery a,
#nav-history a {
    color: #ececef;
}

#alert-container {
    margin-top: 3vh;
}

#ticket-alert {
    margin: 5px;
    text-align: center;
    font-size: 16px;
    letter-spacing: 2px;
    max-height: 30px;
    font-family: "Ubuntu", sans-serif;
    font-weight: 700;
    padding: 6px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#buy-link {
    font-size: 16px;
    margin: 0;
    padding: 5px;
    color: red;
}


/*-------------------Homepage */

.home-container {
    margin-top: 5vh;
    margin-bottom: 10vh;
}

#homeimage {
    background: url("../images/homepage-image.jpg") no-repeat center center;
    width: 100%;
    min-height: 600px;
    background-size: cover;
    padding: 0;
    opacity: 0.7;
    border: 1px solid #151C32;
    border-radius: 25px 25px 25px 25px;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
}

#home-image-container {
    margin-top: 5vh;
}


/*-------------------History Page */

.history-grid-container {
    margin-top: 5vh;
    width: 90%;
    margin-bottom: 10vh;
}

#history-image1 {
    background: url("../images/band-practice-cropped.png") no-repeat bottom center;
    background-size: cover;
}

#history-image2 {
    background: url("../images/history2cropped.png") no-repeat bottom center;
    background-size: cover;
    padding: 0;
}

#history-video {
    min-height: 350px;
    width: 100%;
    border-radius: 10px;
}

#festival-image {
    background: url("../images/festival-stage.jpg") no-repeat center center;
    background-size: cover;
    padding: 0;
}

.history-content-top-row,
.history-content {
    margin-top: 8px;
    margin-bottom: 10px;
    min-height: 340px;
    box-sizing: border-box;
    border: 1px solid #151C32;
    border-radius: 10px;
}

.history-text h4 {
    text-align: left;
    font-size: 20px;
    padding: 20px 25px;
}

.history-text p {
    color: #151C32;
    font-size: 20px;
    font-family: "Cabin Condensed", sans-serif;
    padding: 20px 30px;
}

/*-------------------Gallery Page */

#gallery-heading {
    margin-top: 20px;
    margin-bottom: 10px;
    font-family: Ubuntu, sans-serif;
    font-size: 35px;
    letter-spacing: 2px;
    color: #151C32;
}

/*-------------------Responsive Gallery Styling */

/* Code below from tutorial: (https: //blog.logrocket.com/responsive-image-gallery-css-flexbox/)
    Code source: https: //codesandbox.io/s/delicate-wave-sts6l7?file=/style.css:395-1242) */

ul {
    list-style: none;
}

.gallery-heading {
    margin-top: 20px;
    margin-bottom: 10px;
    font-family: Ubuntu, sans-serif;
    font-size: 35px;
    letter-spacing: 2px;
    color: #151C32;
}

/* Responsive image gallery rules begin*/

.image-gallery {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 15px;
}

.image-gallery-container {
    margin-top: 5vh;
    margin-bottom: 10vh;
    min-width: 80%;
}

.image-gallery li {
    flex: 1 1 auto;
    /* or flex: auto; */
    height: 400px;
    cursor: pointer;
    position: relative;
}

.image-gallery::after {
    content: "";
    flex-grow: 999;
}

.image-gallery li img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    vertical-align: middle;
    border-radius: 10px;
    border: 1px solid #151C32;
}

.overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba(57, 57, 57, 0.502);
    top: 0;
    left: 0;
    transform: scale(0);
    transition: all 0.2s 0.1s ease-in-out;
    font-family: "Cabin Condensed", sans-serif;
    color: #ececef;
    border-radius: 10px;
    /* center overlay content */
    display: flex;
    align-items: center;
    justify-content: center;
}

/* hover */
.image-gallery li:hover .overlay {
    transform: scale(1);
}


/*-------------------Footer */


.social-links li a i {
    width: 40px;
    height: 40px;
    padding: 15px 0;
    border-radius: 50%;
    font-size: 24px;
    line-height: 7px;
    text-align: center;
    color: #ececef;
    background-color: #151C32;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links {
    padding-top: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.social-links li a i:hover {
    color: #1c2543;
    background-color: #ececef;
}

/* snippet below from: https://www.w3schools.com/css/css_align.asp */
#watch-link {
    display: flex;
    justify-content: center;
    align-items: center;
}

#watch-link {
    font-size: 18px;
    display: inline-block;
    text-decoration: none;
    text-align: center;
}

#watch-link a:hover {
    color: #ececef;
}

#contact-button {
    background-color: #151C32;
    color: #ececef;
    text-decoration: none;
    font-family: "Ubuntu", sans-serif;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: 700;
    font-size: 16px;
    letter-spacing: 1px;
    margin: 20px 5px 10px 40px;
    padding: 5px;
}

#footer-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

footer {
    max-height: 10vh;
    position: fixed;
    bottom: 0;
    width: 100%;
    margin-top: 6px;
}

/*-------------------Modal */

.modal {
    display: none;
    margin: auto 0;
    position: fixed;
    z-index: 1040;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    border-radius: 0;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.4);
}

.modal-dialog {
    max-height: 90%;
    top: 5vh;
    background-color: #AEABBA;
    z-index: 1060;
    margin: 0 auto;
    position: relative;
    padding: 3px;
    max-width: 80%;
    border: 1px solid #151C32;
    border-radius: 25px 25px 25px 25px;
}

.modal-content {
    width: 100%;
    background-color: #ececef;
    border: 1px solid #151C32;
    border-radius: 25px 25px 25px 25px;
}

.modal-header {
    padding: 2px 16px;
}

.form-group {
    font-family: "Cabin Condensed", sans-serif;
    color: #151C32;
}

.modal-body {
    padding: 2px 16px;
}

#feedback {
    width: 100%;
}

.modal-footer {
    padding: 2px 16px;
}

#form-header,
#name-label,
#email-label,
#cancel,
#send {
    font-family: Ubuntu, sans-serif;
}

/*-------------------Contact Form */

.form-control {
    padding: 5px;
    font-family: "Cabin Condensed", sans-serif;
    font-weight: 400;
    font-size: 16px;
    margin: 5px;
    max-width: 85%;
}


/*-------------------Media Queries */


@media screen and (max-width:576px) {
    .nav-container {
        display: none;

    }

    #homeimage,
    #nav-container {
        border-radius: 25px 25px 25px 25px;
    }

    #logo {
        font-size: 10vh;
        margin-bottom: 30px;
    }

    a {
        overflow: hidden;
        Margin-top: 2px;
        text-decoration: none;
        font-size: 12px;
        letter-spacing: 2px;
        padding: 3px 3px 5px 3px;
    }

    .history-content {
        margin: 5px;
    }

    .history-grid-container {
        margin-top: 20vh;
        display: inline-grid;
        justify-items: center;
        width: 90%;
    }

    .modal-content {
        max-width: 80%;
    }
}

@media screen and (max-width:768px) {
    #nav-container {
        padding: 10px 20px 20px 10px;
    }

    #homeimage,
    #nav-container {
        border-radius: 25px 25px 25px 25px;
    }

    #ticket-alert {
        display: none;
    }
}

@media screen and (min-width:768px) {
    #nav-container {
        border-radius: 0 25px 25px 0;
    }

    #homeimage {
        border-radius: 25px 25px 25px 25px;
    }

    .history-content-top-row {
        max-width: 32%;
    }

    .history-content {
        max-width: 49%;
    }

}

